-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.3
-
None
-
3
-
9223372036854775807
The function llapi_layout_get_by_xattr does not set the llc_pattern of a DoM component to LLAPI_LAYOUT_MDT but to LOV_PATTERN_MDT. This causes the function llapi_layout_pattern_set to fail because it is expecting one of the LLAPI_LAYOUT values.
I'm attaching a simplistic patch to explain.